# genixbit-software-center

./: .dockerignore  .gitignore  ATTRIBUTION.md  Cargo.toml  LICENSE  README.md  brand-check-diagnostic.txt  clippy-diagnostic.txt  clippy-profile-diagnostic.txt
.github/workflows/: apply-accessibility.yml  apply-approved-services-api.yml  apply-apt-log-streaming-v2.yml  apply-apt-log-streaming.yml  apply-apt-plan.yml  apply-apt-progress-classification.yml  apply-brand-design.yml  apply-branded-design.yml  apply-caller-polkit.yml  apply-cancellable-simulation-v2.yml  apply-cancellable-simulation.yml  apply-curated-discover-catalogue.yml  apply-full-dashboard.yml  apply-gtk-activity-details.yml  apply-gtk-activity-filters.yml  apply-gtk-activity-page.yml  apply-gtk-activity-summary.yml  apply-gtk-activity-timing.yml  apply-gtk-approved-services-filters.yml  apply-gtk-approved-services-page.yml  apply-gtk-pagination.yml  apply-gtk-security-filter-reset.yml  apply-gtk-security-filters.yml  apply-gtk-security-reset.yml  apply-gtk-security-updates.yml  (+45 more)
crates/genixpkgd/: Cargo.toml
crates/genixpkgd/src/: appstream.rs  apt.rs  apt_live.rs  apt_plan.rs  apt_simulation.rs  authorization.rs  dpkg.rs  event_journal.rs  journal.rs  main.rs  recovery.rs  simulation_control.rs  systemd.rs  transaction.rs  transaction_query.rs
crates/package-model/: Cargo.toml
crates/package-model/src/: lib.rs
crates/software-center/: Cargo.toml
crates/software-center/src/: accessibility.rs  activity_filter.rs  activity_time.rs  client.rs  dashboard_view.rs  design.rs  design_tokens.rs  main.rs  security_advisory.rs  security_view.rs  service_view.rs  settings.rs  software_stacks.rs  stack_view.rs  system_profile.rs
data/: com.genixbit.SoftwareCenter.css  com.genixbit.SoftwareCenter.desktop  com.genixbit.SoftwareCenter.metainfo.xml  style.css
dbus/: com.genixbit.PackageManager1.xml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  OS_IMAGE_INTEGRATION.md  RELEASE_ROLLBACK.md  RELEASE_ROLLBACK_TESTING.md  REPOSITORY_SIGNING.md  ROADMAP.md
os-image/: default-packages.list
polkit/: com.genixbit.PackageManager1.transaction-control.policy  com.genixbit.packagemanager.policy
release/: release-contract.json  release-policy.json
scripts/: apply-accessibility-patch.py  apply-approved-services-api.py  apply-apt-log-streaming.py  apply-apt-progress-classification.py  apply-brand-design.py  apply-branded-design.py  apply-cancellable-simulation.py  apply-curated-discover-catalogue.py  apply-full-dashboard.py  apply-gtk-activity-details.py  apply-gtk-activity-filters.py  apply-gtk-activity-page.py  apply-gtk-activity-summary.py  apply-gtk-activity-timing.py  apply-gtk-approved-services-filters.py  apply-gtk-approved-services-page.py  apply-gtk-security-filters.py  apply-gtk-security-reset.py  apply-gtk-security-updates.py  apply-persistent-event-history.py  apply-recent-transaction-query.py  apply-restart-recovery.py  apply-security-advisory-details.py  apply-settings-offline-controls.py  apply-software-stacks.py  apply-system-profiles-preview.py  finalize-gtk-security-filter-reset.py  test-transaction-container.sh  validate-accessibility.py  validate-os-image-install.py  validate-release-rollback.py  validate-repository-signing.py
systemd/: genixpkgd.service
tests/: test_accessibility_audit.py  test_release_rollback.py  test_repository_signing.py
(+1 files in other folders)
